--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,16 @@ altgraph==0.16.1
 asgiref==3.2.3
 Django==3.0.2
 djangorestframework==3.11.0
+et-xmlfile==1.0.1
 future==0.18.2
+jdcal==1.4.1
 Jinja2==2.10.1
 lxml==4.4.1
 MarkupSafe==1.1.1
+openpyxl==3.0.3
 pefile==2019.4.18
 Pillow==6.1.0
+psutil==5.7.0
 PyInstaller==3.5
 PySide2==5.13.2
 python-docx==0.8.10
@@ -16,4 +20,3 @@ pywin32-ctypes==0.2.0
 shiboken2==5.13.2
 sqlparse==0.3.0
 xlrd==1.2.0
-psutil==5.7.0
