--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,7 @@ install_requires =
     python-docx >= 0.8
     xlrd <= 1.2
 python_requires = >=3.7
+
+[options.entry_points]
+console_scripts =
+    register-printer = register_printer.__main__:main
